# NLWeb_Core

./: .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  INSTALLATION_GUIDE.md  PUBLISHING.md  README.md  README_SERVER.md  UIPlan.md  VERSION_MANAGEMENT.md  config.yaml  deploy_azure_webapp.sh  deploy_docker.sh  install_all_editable.sh  pyproject.toml  requirements.txt  run_server.py  setup.py  startup.sh  version.py
examples/azure_hello_world/: .env.example  README.md  config.yaml  hello_world.py  requirements.txt
nlw_current/LogFiles/kudu/trace/: 2025-05-28T02-21-47_72814a_001_Startup_GET_webssh-host_0s.xml  2025-05-28T03-14-25_72814a_011_GET_api-deployments-latest_202_0s.xml  2025-06-04T16-18-25_65a20e_007_GET_api-deployments-af9919c7-9563-410d-b8a8-8bfad3dfd136_200_0s.xml  2025-06-04T17-14-00_65a20e_017_GET_api-deployments-latest_202_1s.xml  2025-06-04T17-38-41_65a20e_004_GET_api-deployments-latest_202_0s.xml  2025-06-04T19-00-45_65a20e_022_GET_api-deployments-latest_202_0s.xml  2025-07-04T18-09-29_1c0c6b_004_Background_POST_api-zipdeploy_pending.xml  2025-10-15T00-04-53_470cf8_006_POST_api-command_200_1s.xml  2025-11-12T21-40-46_0ce493_001_Startup_GET_api-deployments_0s.xml  2025-11-12T21-46-20_0ce493_001_Startup_GET_api-deployments_0s.xml  2025-11-12T21-46-22_0ce493_003_POST_api-publish_pending.xml  2025-11-12T21-59-10_0ce493_012_Background_POST_api-publish_pending.xml  2025-11-12T21-59-14_0ce493_014_GET_api-deployments-4254ab17-51f5-4424-b6f8-d7bc9a35fa6b_200_1s.xml  (+31 more)
nlw_current/deployments/4ea5ef71-99f3-4cd6-a61a-243b81db77ec/: status.xml
nlw_debug/deployments/c6c5ec53-a5e3-46c8-8863-753136982c20/: status.xml
nlw_final/deployments/: active
nlw_final/deployments/f1215b3c-6040-4b17-91b7-cd8a441d4575/: status.xml
nlw_idli/deployments/: active
nlw_idli/deployments/088c28ef-532d-450d-a31f-66043519f165/: status.xml
nlw_idli/deployments/4ea5ef71-99f3-4cd6-a61a-243b81db77ec/: manifest
nlw_idli/deployments/a79629fd-d263-407d-bb11-688bfffb3493/: status.xml
nlw_latest/LogFiles/: __lastCheckTime.txt
nlw_latest/deployments/2dc5d84e-073c-4a73-9f66-d2aeb87fa7a5/: manifest
nlw_latest/deployments/4254ab17-51f5-4424-b6f8-d7bc9a35fa6b/: status.xml
nlw_test/deployments/2dc5d84e-073c-4a73-9f66-d2aeb87fa7a5/: status.xml
nlw_test/deployments/c38f796e-f12a-473c-a4f4-46e40f0584a0/: status.xml
nlw_verbose/deployments/088c28ef-532d-450d-a31f-66043519f165/: manifest
nlw_verbose/deployments/4bb016ab-b2c6-4ddc-b34a-060893ba6be9/: status.xml
nlw_verbose/deployments/58c8f717-0ddf-4429-92f4-476b1e3b3625/: status.xml
nlw_verbose/deployments/db819759-aaa6-4332-9a9b-d6b5fc0d2986/: status.xml
nlweb-ui/: index.html  nlweb-chat.css  nlweb-chat.js
scripts/: setup_pypi.md  test_from_pypi.sh  test_from_testpypi.sh  test_packages.sh  test_sse_endpoint.sh  upload_to_pypi.sh
(+254 files in other folders)
